@@ -3,11 +3,11 @@ package com.donny.dendrofinance.gui.menu.data.backing.edit;
 import com.donny.dendrofinance.data.backingtable.BackingTableCore;
 import com.donny.dendrofinance.gui.menu.data.backing.BackingTableGui;
 import com.donny.dendrofinance.instance.Instance;
-import com.donny.dendrofinance.util.ExportableToJsonObject;
+import com.donny.dendrofinance.util.ExportableToJson;
 
 import javax.swing.*;
 
-public abstract class BackingEditGui<E extends ExportableToJsonObject> extends JDialog {
+public abstract class BackingEditGui<E extends ExportableToJson> extends JDialog {
     protected final Instance CURRENT_INSTANCE;
     protected final BackingTableCore<E> TABLE;
     protected final int INDEX;
